e2e/agic/hostnameextension/https/output/httproute-default-contoso-ingress-contoso-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: contoso-ingress-contoso-com
  namespace: default
spec:
  hostnames:
  - contoso.com
  - fabrikam.com
  - sub.fabrikam.com
  - sub-2.fabrikam.com
  parentRefs:
  - name: alb-gateway
    sectionName: https-contoso-com
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: alb-gateway
    namespace: default
    sectionName: https-fabrikam-com
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: alb-gateway
    namespace: default
    sectionName: https-sub-fabrikam-com
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: alb-gateway
    namespace: default
    sectionName: https-sub-2-fabrikam-com
  rules:
  - backendRefs:
    - name: contoso-service
      port: 80
    matches:
    - path:
        type: Exact
        value: /
